# Informatik3

./: .gitignore  Makefile  README
01_cpp_decomment/: .gitignore  Makefile  decomment.cpp  with_comments.cpp  without_comments.cpp
02_cpp_line_break/: .gitignore  line_break.cpp
Calendar_Excercise_2/: main.cpp
ChiffreTeyt/: main.cpp
OpenCV_Tests/: OpenCV_Tests.pro  main.cpp
OpenCV_sinus/: main.cpp
Palindrome/: main.cpp
Pruefung_Aufgb/: main.cpp
RabusBot/: CMakeLists.txt  main.cpp
Ringbuffer_string/: main.cpp
TBot/: TBot.pro  tbot_global.h  tgbot.cpp  tgbot.h
TelegramBot/: TelegramBot.pro  main.cpp  telegram_bot
build-Calendar_Excercise_2-Desktop-Debug/: Calendar_Excercise_2  Makefile
build-ChiffreTeyt-Desktop-Debug/: ChiffreTeyt  Makefile
build-OpenCV_Tests-Desktop-Debug/: Makefile  OpenCV_Tests
build-OpenCV_sinus-Desktop-Debug/: Makefile  OpenCV_sinus
build-Palindrome-Desktop-Debug/: Makefile  Palindrome
build-Pruefung_Aufgb-Desktop-Debug/: Makefile  Pruefung_Aufgb
build-RabusBot-Desktop-Debug/: CMakeCache.txt  Makefile  RabusBot.cbp  cmake_install.cmake
build-RabusBot-Desktop-Debug/TradingSystem-SCRY-master/: CMakeLists.txt  Readme.md  chartdata.json  generateVSProject.bat  runWindowsDebug.bat
build-RabusBot-Desktop-Debug/TradingSystem-SCRY-master/PoloniexAPI/: CMakeLists.txt  PoloniexClient.cpp  PoloniexClient.hpp  Request.cpp  Request.hpp
build-RabusBot-Desktop-Debug/TradingSystem-SCRY-master/cpp/: ExpMovingAverageIndicator.cpp  LineIndicator.cpp  MarketMonitor.cpp  MovingAverageIndicator.cpp  TimeSeriesDataColumn.cpp  TimeSeriesDataset.cpp  TimeSeriesPoint.cpp  main.cpp
build-RabusBot-Desktop-Debug/TradingSystem-SCRY-master/hpp/: ExpMovingAverageIndicator.h  Indicator.h  LineIndicator.h  MarketMonitor.h  MovingAverageIndicator.h  TimeSeriesDataColumn.h  TimeSeriesDataset.h  TimeSeriesPoint.h
build-RabusBot-Desktop-Default/: CMakeCache.txt  Makefile  RabusBot.cbp  cmake_install.cmake
build-RabusBot-Desktop-Release/: CMakeCache.txt  Makefile  RabusBot.cbp  cmake_install.cmake
build-Ringbuffer_string-Desktop-Debug/: Makefile  Ringbuffer_string
build-TBot-Desktop-Debug/: Makefile  libTBot.so.1.0  libTBot.so.1.0.0
build-TelegramBot-Desktop-Debug/: Makefile
build-TelegramBot-Desktop-Profile/: Makefile
build-TelegramBot-Desktop-Release/: Makefile
build-cedes_driver-Desktop-Debug/: Makefile  cedes_driver
build-complex_class-Desktop-Debug/: Makefile  complex_class
build-cpp_line_break-Desktop-Debug/: Makefile  cpp_line_break
build-curlctest-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  curlctest  curlctest.cbp
build-curltest-Desktop-Debug/: Makefile
build-curltestc-Desktop-Debug/: Makefile
build-curltestc-Desktop-Release/: Makefile
build-decommend-Desktop-Debug/: Makefile  decommend
build-hello_c-Desktop-Debug/: Makefile  hello_c
build-isbn_checker-Desktop-Debug/: Makefile  isbn_checker
build-parse_double_string-Desktop-Debug/: Makefile  parse_double_string
build-pruefung_file_reverse_line-Desktop-Debug/: Makefile  pruefung_file_reverse_line
build-pruefung_letter_frequency-Desktop-Debug/: Makefile  pruefung_letter_frequency
build-pruefung_opencv-Desktop-Debug/: Makefile  pruefung_opencv
build-pruefung_reverse_string-Desktop-Debug/: Makefile  pruefung_reverse_string
build-search_replace_string-Desktop-Debug/: Makefile  search_replace_string
build-sinus-Desktop-Debug/: Makefile  sinus
build-spellcheck-Desktop-Debug/: Makefile  spellcheck
build-strin_split_join_Rabus-Desktop-Debug/: Makefile  strin_split_join_Rabus
build-string_splitting_joining-Desktop-Debug/: Makefile  string_splitting_joining
build-string_touppercase-Desktop-Debug/: Makefile  string_touppercase
build-visualize_sort-Desktop-Debug/: Makefile  visualize_sort
calendar_exercise_muster/: calendar_exercise_muster.pro  date.cpp  date.h  main.cpp
complex_class/: main.cpp
cpp_line_break/: main.cpp
curlctest/: CMakeLists.txt  main.cpp
(+71 files in other folders)
